# newsletters

./: .gitignore  Cargo.toml  Dockerfile  LICENSE
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: healt_check.rs  health_check.rs
