[package]
name = "newsletters"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path="src/main.rs"
name="newsletters"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
reqwest = "0.11.17"
serde = {version="1.0.163",features=["derive"]}
tokio = {version = "1.28.1", features= ["macros","rt-multi-thread"]}
config = "0.13"
uuid = {version="1.3.2", features= ["v4"]}
chrono = {version="0.4.24", default-features = false, features= ["clock"]}
tracing = {version="0.1", features=["log"]}
tracing-subscriber = {version="0.3", features=["registry","env-filter"]}
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
once_cell = "1"

[dependencies.sqlx]
version="0.6"
default-features=false
features=[
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]
